--- a/templates/tests/test-connection.yaml
+++ b/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "fauxpilot.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "fauxpilot.fullnameProxy" . }}:5000']
   restartPolicy: Never
