--- a/templates/triton-deployment.yaml
+++ b/templates/triton-deployment.yaml
@@ -26,9 +26,9 @@ spec:
       {{- end }}
       serviceAccountName: {{ include "fauxpilot.serviceAccountName" . }}
       volumes:
-        - name: tritons3
+        - name: fauxpilot-s3
           configMap:
-            name: tritons3
+            name: fauxpilot-s3
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -62,7 +62,7 @@ spec:
             - name: http
               containerPort: 8000
               protocol: TCP
-            - name: gRPC
+            - name: grpc
               containerPort: 8001
             - name: metrics
               containerPort: 8002
@@ -77,7 +77,7 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-            - name: tritons3
+            - name: fauxpilot-s3
               mountPath: /root/.mc/config.json
               subPath: config.json
       {{- with .Values.nodeSelector }}
