--- a/templates/proxy-deployment.yaml
+++ b/templates/proxy-deployment.yaml
@@ -37,7 +37,7 @@ spec:
           - name: NUM_GPUS
             value: "1"
           - name: TRITON_HOST
-            value: "triton"
+            value: {{ include "fauxpilot.fullnameTriton" . }}
           - name: TRITON_PORT
             value: "8001"
           - name: MODEL
